--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Antonis Lekkas",
+  "author": "Programming Department of TeamGreece",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.1.1",
