--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.1.1",
+    "fs": "0.0.1-security",
     "ms": "^2.1.2",
     "rich-embed": "^1.1.3"
   }
